--- a/udagram-reverse-proxy/nginx.conf
+++ b/udagram-reverse-proxy/nginx.conf
@@ -1,15 +1,28 @@
-events {
-}
+worker_processes 1;
+  
+events { worker_connections 1024; }
+error_log /dev/stdout debug;
+
 http {
+
+    sendfile on;
+
+    upstream user {
+        server backend-user:8080;
+    }
+
+    upstream feed {
+        server backend-feed:8080;
+    }
+    
     server {
         listen 8080;
-
         location /api/v0/feed {
-            proxy_pass http://localhost:8085/api/v0/feed/;
+            proxy_pass         http://feed;
         }
-
         location /api/v0/users {
-            proxy_pass http://localhost:8081/api/v0/users/;
-        } 
+            proxy_pass         http://user;
+        }            
     }
+
 }
