--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: minimal
 services: docker
 
 install:
-  - docker-compose -f docker-compose.yaml build --parallel 
-  - docker-compose -f docker-compose.yaml push
+  - docker-compose -f docker-compose.yml build --parallel 
+  - docker-compose -f docker-compose.yml push
 
 before_script:
   - echo "no tests"
