--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,34 @@ services:
     build:
       context: udagram-user
     image: finfalter/udagram-user
-    env_file:
-      - ./env.list
     volumes:
       - $HOME/.aws/credentials:/root/.aws/credentials:ro
+    environment:
+      POSTGRES_USERNAME : $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_HOST: $POSTGRES_HOST
+      AWS_REGION: $AWS_REGION
+      AWS_PROFILE: $AWS_PROFILE
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $JWT_SECRET
+      URL: "http://localhost:8100"
   backend-feed:
     build:
       context: udagram-feed
     image: finfalter/udagran-feed
-    env_file:
-      - ./env.list
     volumes:
       - $HOME/.aws/credentials:/root/.aws/credentials:ro
+    environment:
+      POSTGRES_USERNAME : $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_HOST: $POSTGRES_HOST
+      AWS_REGION: $AWS_REGION
+      AWS_PROFILE: $AWS_PROFILE
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $JWT_SECRET
+      URL: "http://localhost:8100"
   frontend:
     build:
       context: udagram-frontend  
