--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ services: docker
 
 install:
   - docker-compose -f docker-compose.yml build --parallel 
-  - docker-compose -f docker-compose.yml push
 
 before_script:
   - echo "no tests"
 
 script:
   - docker --version # print the version for logging
+
+after_success:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker-compose -f docker-compose.yml push
