docker compose bug fix

--- a/udagram-feed/Dockerfile
+++ b/udagram-feed/Dockerfile
@@ -16,7 +16,8 @@ COPY . .
 
 EXPOSE 8080
 
-CMD [ "npm", "run", "prod" ]
+#CMD [ "npm", "run", "prod" ]  
+CMD [ "npm", "run", "prod", ">", "output.log", "&"]
 
 
 # # Use NodeJS base image
