--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     - 8080:8080
     restart: always
     depends_on:
-      - backend-user
-      - backend-feed
-  backend-user:
+      - udagram-user
+      - udagram-feed
+  udagram-user:
     build:
       context: udagram-user
     image: finfalter/udagram-user
@@ -26,7 +26,7 @@ services:
       AWS_BUCKET: $AWS_BUCKET
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
-  backend-feed:
+  udagram-feed:
     build:
       context: udagram-feed
     image: finfalter/udagran-feed
@@ -42,7 +42,7 @@ services:
       AWS_BUCKET: $AWS_BUCKET
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
-  frontend:
-    build:
-      context: udagram-frontend  
+  udagram-frontend:
     image: finfalter/udagram-frontend
+    ports:
+      - "8100:80"
