--- a/udagram-frontend/deploy/service.yml
+++ b/udagram-frontend/deploy/service.yml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: udagram-frontend
+  labels:
+    service: udagram-frontend
 spec:
-  type: LoadBalancer
-  selector:
-    app: udagram-frontend
   ports:
   - name: "8100"
     port: 8100
-    targetPort: 8100
+    targetPort: 80
+  selector:
+    service: udagram-frontend
+  type: LoadBalancer
