--- a/udagram-reverse-proxy/deploy/service.yml
+++ b/udagram-reverse-proxy/deploy/service.yml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: udagram-reverse-proxy
+  labels:
+    service: udagram-reverse-proxy
 spec:
-  type: LoadBalancer
-  selector:
-    app: udagram-reverse-proxy
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
+  selector:
+    service: udagram-reverse-proxy
+  type: LoadBalancer
