--- a/udagram-user/deploy/service.yml
+++ b/udagram-user/deploy/service.yml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: udagram-user
+  labels:
+    service: udagram-user
 spec:
-  selector:
-    app: udagram-user
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
+  selector:
+    service: udagram-user
