--- a/deployment/reverse-proxy-deployment.yml
+++ b/deployment/reverse-proxy-deployment.yml
@@ -1,9 +1,9 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: udagram-reverse-proxy
   labels:
     service: udagram-reverse-proxy
-  name: udagram-reverse-proxy
 spec:
   replicas: 1
   selector:
@@ -15,7 +15,7 @@ spec:
         service: udagram-reverse-proxy
     spec:
       containers:
-      - image: finfalter/udagram-reverse-proxy:latest
+      - image: finfalter/udagram-reverse-proxy
         name: udagram-reverse-proxy
         imagePullPolicy: Always          
         resources:
