--- a/deployment/user-service.yml
+++ b/deployment/user-service.yml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: udagram-user
   labels:
-    service: reverse-proxy
-  name: reverse-proxy
+    service: udagram-user
 spec:
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
   selector:
-    service: reverse-proxy
-  type: LoadBalancer
+    service: udagram-user
