--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   udagram-frontend:
+    build:
+      context: udagram-feed
     image: finfalter/udagram-frontend
     ports:
       - "8100:80"
