--- a/deployment/user-deployment.yml
+++ b/deployment/user-deployment.yml
@@ -76,7 +76,7 @@ spec:
               key: POSTGRES_USERNAME     
         volumeMounts:
         - name: aws-secret
-          mountPath: "/usr/src/app/secret/"
+          mountPath: "/root/.aws/"
           readOnly: true  
       restartPolicy: Always     
       volumes:
